[tool.poetry]
name = "perx"
version = "0.1.0"
description = ""
authors = ["lainiwa <kirrik96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = {version = "^3.6.2", extras = ["speedups"]}
pydantic = {version = "^1.6.1", extras = ["typing_extensions"]}
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
aiohttp-devtools = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
